codegen/tests/ui/struct/no_url2.stderr
error: metadata url not specified
 --> tests/ui/struct/no_url2.rs:9:1
  |
9 | #[feign(path = "http://xxx")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `feign` (in Nightly builds, run with -Z macro-backtrace for more info)
