codegen/tests/ui/struct/no_url2.rs
use feignhttp_codegen::feign;

// error: metadata url not specified
//    |  #[feign(path = "http://xxx")]
//    |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

struct Http;

#[feign(path = "http://xxx")]
impl Http {}

fn main() {}
